# graphica

./: Cargo.toml  LICENSE  README.md
examples/: fullscreen-texture.rs  fullscreen_texture.rs  graph-visualize.rs  graph_visualize.rs  triangle.rs
graphica-macro/: Cargo.toml
graphica-macro/src/: lib.rs
src/: context.rs  instance.rs  lib.rs
src/device/: device_context.rs  graphics_queue.rs  mod.rs  physical_device.rs
src/queue/: local_thread_pool.rs  logical_queue.rs  mod.rs  queue_family.rs
src/render_graph/: dag.rs  mod.rs  render_graph.rs  resource.rs  resource_state.rs  sync.rs
src/render_graph/execution/: mod.rs
src/render_graph/operations/: custom.rs  draw_call.rs  gpu_operation.rs  mod.rs  upload.rs
src/rendering/: buffer_container.rs  descriptor_container.rs  framebuffer_container.rs  global_variables.rs  label_container.rs  mod.rs  pass_container.rs  pipeline_container.rs  render_pass_container.rs  renderer_bundle.rs  shader_container.rs  state_container.rs  texture_container.rs
src/swapchain/: frame_data.rs  frame_sync.rs  mod.rs  swapchain.rs
